last fixes on mobile optimization 303030 page

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -820,6 +820,7 @@ h3.dashboard-plot-title {
     padding-right: 2.5rem;
     font-weight: bold;
     margin-bottom: 3rem;
+    font-size: 16pt
 }
 .dashboard-plot-title img {
     padding-left: 0.75rem;
